# playwright-template

./: .env.beta  .env.example  .env.prod  .env.test  .eslintrc.yml  .flake8  .gitignore  .prettierignore  .prettierrc  README.md  TEMPLATE_GUIDE.md  customFixture.ts  env.ts  eslint.config.mjs  global-setup.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  report.html  skills-lock.json  tsconfig.json
.github/: copilot-instructions.md
.github/agents/: ci-debugger.agent.md  qa-reviewer.agent.md  test-fixer.agent.md  test-generator.agent.md  test-planner.agent.md
.github/copilot/: mcp.json
.github/workflows/: beta-regression.yml  critical-flows.yml  integration-tests.yml  lint.yml  parameterized-regression.yml  python-ci.yml  smoke-prod.yml  test-regression.yml
api/: api.ts  requestHolders.ts
api/api-controllers/: authorization.controller.ts  presentation.controller.ts
api/api-helpers/: apiHelpers.ts  extraHTTPHeaders.ts
app/: app.ts  generalHelpers.ts  pageHolder.ts
app/components/: headerComponent.ts  notificationComponent.ts
app/pages/: explorePage.ts  loginPage.ts
constants/: accountOptions.ts  apiEndpoints.ts  authCookies.ts
constants/users/: testUsers.ts
models/: presentation.d.ts  user.d.ts
python_playwright/: Makefile  config.py  conftest.py  pytest.ini  report.html  requirements.txt
python_playwright/api/: api_manager.py  base_api_client.py
python_playwright/app/: application.py  base_page.py
test-data/: fileNameData.ts
test-data/mocks/: example.mock.ts
utils/: emailAuth.util.ts  file-utils.ts  fs.util.ts
(+21 files in other folders)
