[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-playwright-template"
version = "0.1.0"
description = "Starter template for UI, API and E2E testing with Playwright and pytest."
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--verbose -ra --strict-markers --tb=short"
testpaths = ["python_playwright/tests"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["venv", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["python_playwright"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = ["venv", ".venv"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E501"]
